--- a/tf_practice_1.ipynb
+++ b/tf_practice_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN7o8GgEuPF5S+UiDC6Q8M8",
+      "authorship_tag": "ABX9TyM5fYrtaoVV2zvKgyID4Mbv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "hSBl1ZxD5PdA"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import tensorflow as tf"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Tensorflow version:\",tf.__version__)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0qWafjdD6HZR",
+        "outputId": "a968cba8-9e44-4c19-db71-2b6af32bdb89"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tensorflow version: 2.15.0\n"
+          ]
+        }
+      ]
     }
   ]
 }
