--- a/tf_practice_1.ipynb
+++ b/tf_practice_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM5fYrtaoVV2zvKgyID4Mbv",
+      "authorship_tag": "ABX9TyObwD2NTWh6/UfaoJFLKSio",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "hSBl1ZxD5PdA"
       },
@@ -47,9 +47,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0qWafjdD6HZR",
-        "outputId": "a968cba8-9e44-4c19-db71-2b6af32bdb89"
+        "outputId": "816db115-f16b-489e-ce94-46b628ceeb07"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -57,6 +57,336 @@
           "text": [
             "Tensorflow version: 2.15.0\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mnist=tf.keras.datasets.mnist"
+      ],
+      "metadata": {
+        "id": "iCaSLnX1661E"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(x_train,y_train),(x_test,y_test)=mnist.load_data()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gWCTjZdB7KzI",
+        "outputId": "1bf27fb7-eb1b-491d-d734-625f1ce6b037"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+            "11490434/11490434 [==============================] - 0s 0us/step\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_train,x_test=x_train/255.0,x_test/255.0"
+      ],
+      "metadata": {
+        "id": "uDrxxIKT7k8i"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(x_train)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pG7lqgRe786B",
+        "outputId": "7adf1d0c-4bf9-4c9a-abea-d0cd82624f91"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "numpy.ndarray"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model=tf.keras.models.Sequential([\n",
+        "    tf.keras.layers.Flatten(input_shape=(28,28)),\n",
+        "    tf.keras.layers.Dense(128,activation='relu'),\n",
+        "    tf.keras.layers.Dropout(0,2),\n",
+        "    tf.keras.layers.Dense(10)\n",
+        "]\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "IxbHNww58L8w"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions=model(x_train[:1]).numpy()\n",
+        "predictions"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c9pMVx2M9WLi",
+        "outputId": "89201ee4-2c21-4b1f-b132-4df8d2aa371d"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[-0.07308452, -1.2938352 ,  0.6933545 , -0.09622924, -0.04516846,\n",
+              "         0.16222462, -0.07600877,  0.58450305, -0.2169275 , -0.02231876]],\n",
+              "      dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tf.nn.softmax(predictions).numpy()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oBXe_9Xu96Iw",
+        "outputId": "a1727380-821d-4ee3-d244-81d1dccabe56"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.08648171, 0.02551285, 0.18611634, 0.0845031 , 0.08892995,\n",
+              "        0.1094253 , 0.08622918, 0.16692097, 0.07489521, 0.09098537]],\n",
+              "      dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss_fn=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)"
+      ],
+      "metadata": {
+        "id": "LmFHB3Co-J0X"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss_fn(y_train[:1],predictions).numpy()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9b3TESxk_B0Q",
+        "outputId": "0a5069ba-e15e-4a69-d208-d00af31b15e1"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.2125132"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.compile(\n",
+        "    optimizer='adam',\n",
+        "    loss=loss_fn,\n",
+        "    metrics=['accuracy']\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "xYKA6UR-_5lI"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.fit(x_train,y_train,epochs=5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mhW65SxsAMRw",
+        "outputId": "2ad9a089-3ece-4dec-9469-0ea2dac7c0cb"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/5\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.2598 - accuracy: 0.9245\n",
+            "Epoch 2/5\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.1140 - accuracy: 0.9664\n",
+            "Epoch 3/5\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0780 - accuracy: 0.9766\n",
+            "Epoch 4/5\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0578 - accuracy: 0.9819\n",
+            "Epoch 5/5\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0459 - accuracy: 0.9862\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.History at 0x795026f53490>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.evaluate(x_test,y_test,verbose=2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LZ20BFb-vBbp",
+        "outputId": "10a6ee32-bb95-44af-94d9-d292287149ea"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "313/313 - 0s - loss: 0.0790 - accuracy: 0.9766 - 409ms/epoch - 1ms/step\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.07904013991355896, 0.9765999913215637]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "probability_model=tf.keras.models.Sequential(\n",
+        "    [\n",
+        "        model,\n",
+        "        tf.keras.layers.Softmax()\n",
+        "    ]\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "kSDzcFyuvaMb"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "probability_model(x_test[:5])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JXVWuISBvyA6",
+        "outputId": "059ae5d6-d244-43fd-9516-c790d0e2e958"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(5, 10), dtype=float32, numpy=\n",
+              "array([[6.3425816e-09, 6.0555255e-10, 1.3428725e-07, 7.8789795e-05,\n",
+              "        2.5893950e-11, 1.1427530e-08, 1.2859568e-12, 9.9991846e-01,\n",
+              "        1.3010057e-07, 2.4988008e-06],\n",
+              "       [5.1323608e-09, 1.9707139e-04, 9.9936670e-01, 4.3221001e-04,\n",
+              "        6.1535273e-12, 5.6657502e-08, 8.9878716e-07, 1.9455334e-12,\n",
+              "        2.9348935e-06, 1.1486209e-13],\n",
+              "       [6.4118268e-07, 9.9970263e-01, 9.8624196e-06, 2.6930181e-06,\n",
+              "        5.3904660e-05, 2.2453176e-05, 1.9918798e-05, 9.4689567e-05,\n",
+              "        9.2889546e-05, 2.9356687e-07],\n",
+              "       [9.9987292e-01, 1.5518612e-09, 2.3736020e-05, 4.5499757e-08,\n",
+              "        7.1268965e-07, 1.0729713e-07, 9.5929492e-05, 2.8704169e-06,\n",
+              "        4.1587071e-11, 3.7392510e-06],\n",
+              "       [1.6422773e-06, 3.7410186e-07, 3.5752535e-06, 2.5166054e-07,\n",
+              "        9.6037161e-01, 1.7465394e-09, 1.8309076e-05, 2.9069546e-04,\n",
+              "        1.2350473e-07, 3.9313417e-02]], dtype=float32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
         }
       ]
     }
