--- a/tf_practice_2.ipynb
+++ b/tf_practice_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN7o8GgEuPF5S+UiDC6Q8M8",
+      "authorship_tag": "ABX9TyN6xtPy5nYE3vUOHbrMXV4X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,230 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 70,
       "metadata": {
         "id": "tEN5bP9wxQYG"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# prompt: import tensforflow as tf\n",
+        "import tensorflow as tf"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.layers import Dense,Conv2D,Flatten\n",
+        "from tensorflow.keras import Model"
+      ],
+      "metadata": {
+        "id": "8OEhGNcAx1oL"
+      },
+      "execution_count": 71,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mnist=tf.keras.datasets.mnist"
+      ],
+      "metadata": {
+        "id": "1ja9k6plzSa1"
+      },
+      "execution_count": 72,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(x_train,y_train),(x_test,y_test)=mnist.load_data()"
+      ],
+      "metadata": {
+        "id": "zH8WrP1WzjHC"
+      },
+      "execution_count": 73,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_train,x_test=x_train/255.0,x_test/255.0"
+      ],
+      "metadata": {
+        "id": "B-Bi6bAezsS7"
+      },
+      "execution_count": 74,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_train=x_train[...,tf.newaxis].astype(\"float32\")\n",
+        "x_test=x_test[...,tf.newaxis].astype(\"float32\")"
+      ],
+      "metadata": {
+        "id": "AMC6cRsv0Xd6"
+      },
+      "execution_count": 75,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_ds=tf.data.Dataset.from_tensor_slices(\n",
+        "    (x_train,y_train)).shuffle(10000).batch(32)"
+      ],
+      "metadata": {
+        "id": "eddZUqsD0xd9"
+      },
+      "execution_count": 76,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_ds=tf.data.Dataset.from_tensor_slices((x_test,y_test)).batch(32)"
+      ],
+      "metadata": {
+        "id": "-vcFO9S61Vmb"
+      },
+      "execution_count": 77,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class MyModel(Model):\n",
+        "  def __init__(self):\n",
+        "    super().__init__()\n",
+        "    self.conv1 = Conv2D(32, 3, activation='relu')\n",
+        "    self.flatten = Flatten()\n",
+        "    self.d1 = Dense(128, activation='relu')\n",
+        "    self.d2 = Dense(10)\n",
+        "\n",
+        "  def call(self, x):\n",
+        "    x = self.conv1(x)\n",
+        "    x = self.flatten(x)\n",
+        "    x = self.d1(x)\n",
+        "    return self.d2(x)\n",
+        "\n",
+        "# Create an instance of the model\n",
+        "model = MyModel()"
+      ],
+      "metadata": {
+        "id": "0NlfcXEv9Ly9"
+      },
+      "execution_count": 78,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss_obj=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)\n",
+        "optimizer=tf.keras.optimizers.Adam()"
+      ],
+      "metadata": {
+        "id": "_0B9CIcKTo7S"
+      },
+      "execution_count": 79,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_loss=tf.keras.metrics.Mean(name='train_loss')\n",
+        "train_accuracy=tf.keras.metrics.SparseCategoricalAccuracy(name='train_accuracy')\n"
+      ],
+      "metadata": {
+        "id": "UM9IoWVgT6Zd"
+      },
+      "execution_count": 80,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_loss=tf.keras.metrics.Mean(name='test_loss')\n",
+        "test_accuracy=tf.keras.metrics.SparseCategoricalAccuracy(name='test_accuracy')"
+      ],
+      "metadata": {
+        "id": "zCCma4NzUNuH"
+      },
+      "execution_count": 81,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "@tf.function\n",
+        "def train_step(images, labels):\n",
+        "  with tf.GradientTape() as tape:\n",
+        "    # training=True is only needed if there are layers with different\n",
+        "    # behavior during training versus inference (e.g. Dropout).\n",
+        "    predictions = model(images, training=True)\n",
+        "    loss = loss_obj(labels, predictions)\n",
+        "  gradients = tape.gradient(loss, model.trainable_variables)\n",
+        "  optimizer.apply_gradients(zip(gradients, model.trainable_variables))\n",
+        "\n",
+        "  train_loss(loss)\n",
+        "  train_accuracy(labels, predictions)"
+      ],
+      "metadata": {
+        "id": "cVDl4S5IUqUk"
+      },
+      "execution_count": 83,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "@tf.function\n",
+        "def test_step(images, labels):\n",
+        "  # training=False is only needed if there are layers with different\n",
+        "  # behavior during training versus inference (e.g. Dropout).\n",
+        "  predictions = model(images, training=False)\n",
+        "  t_loss = loss_obj(labels, predictions)\n",
+        "\n",
+        "  test_loss(t_loss)\n",
+        "  test_accuracy(labels, predictions)"
+      ],
+      "metadata": {
+        "id": "reXWo9ouWEWy"
+      },
+      "execution_count": 84,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "EPOCHS = 5\n",
+        "\n",
+        "for epoch in range(EPOCHS):\n",
+        "  # Reset the metrics at the start of the next epoch\n",
+        "  train_loss.reset_states()\n",
+        "  train_accuracy.reset_states()\n",
+        "  test_loss.reset_states()\n",
+        "  test_accuracy.reset_states()\n",
+        "\n",
+        "  for images, labels in train_ds:\n",
+        "    train_step(images, labels)\n",
+        "\n",
+        "  for test_images, test_labels in test_ds:\n",
+        "    test_step(test_images, test_labels)\n",
+        "\n",
+        "  print(\n",
+        "    f'Epoch {epoch + 1}, '\n",
+        "    f'Loss: {train_loss.result()}, '\n",
+        "    f'Accuracy: {train_accuracy.result() * 100}, '\n",
+        "    f'Test Loss: {test_loss.result()}, '\n",
+        "    f'Test Accuracy: {test_accuracy.result() * 100}'\n",
+        "  )"
+      ],
+      "metadata": {
+        "id": "2bx6_p7EWIfV"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
